--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   },
   "name": "part3fullstackopen",
   "description": "https://fullstackopen.com/osa3/ repo for Fullstack open 2022 part 3",
