--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "version": "0.0.1",
   "main": "index.js",
   "devDependencies": {
+    "eslint": "^8.23.0",
     "nodemon": "^2.0.19"
   },
   "scripts": {
@@ -20,7 +21,9 @@
     "build:ui": "rm -rf build && cd puhelinluettelo/ && npm run build && cp -r build ..",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix --ext .js,.jsx ."
   },
   "repository": {
     "type": "git",
